--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,3 +1,3 @@
-<ion-view title="Home">
+<ion-view title="Settings">
 	<ion-content overflow-scroll="true" padding="true" class="has-header"></ion-content>
 </ion-view>
