--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -2,20 +2,18 @@
 	<ion-content overflow-scroll="true" padding="true" scroll="false" class="has-header">
 		<form class="list">
 			<ion-list>
-				<label class="item item-input">
-					<span class="input-label">Name</span>
-					<input type="text" placeholder="">
+				<label class="item item-input" name="Email">
+					<input type="email" placeholder="Email">
 				</label>
-				<label class="item item-input">
-					<span class="input-label">Username</span>
-					<input type="text" placeholder="">
+				<label class="item item-input" name="Username">
+					<input type="text" placeholder="Username">
 				</label>
-				<label class="item item-input">
-					<span class="input-label">Password</span>
-					<input type="text" placeholder="">
+				<label class="item item-input" name="Password">
+					<input type="text" placeholder="Password">
 				</label>
 			</ion-list>
-			<button class="button button-stable button-block ">Sign up</button>
+			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-positive  button-block">Sign
+				up</a>
 		</form>
 	</ion-content>
 </ion-view>
