--- a/www/css/morphCarousel.white-theme.css
+++ b/www/css/morphCarousel.white-theme.css
@@ -13,8 +13,8 @@
 	left: 50%;
 	width: 45px;
 	margin-left: -21px;
-	border-left: 1px solid #6AF591;
-	border-right: 1px solid #6AF591;
+	border-left: 1px solid #C2C2C2;
+	border-right: 1px solid #C2C2C2;
 }
 
 .morph-carousel__shadow {
