Added details routing.

--- a/www/templates/chronicle.html
+++ b/www/templates/chronicle.html
@@ -10,7 +10,7 @@
 					</div>
 					<div class="cd-timeline-content padding dark">
 						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
-						<a href="#/page1/page3" class="cd-timeline-discuss">
+						<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">
 							<i class="ion-chatbubble-working positive"></i>
 						</a>
 						<p class="marginTop5 cd-author">{{activity.date}}</p>
