--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,17 @@
-/* Empty. Add your own CSS if you like */
+.login-content {
+	background-image: url("img/login.jpg");
+	background-size: 100% 100%;
+}
+
+.login-back {
+	height: 65%;
+	width: 100%;
+}
+
+.login-form .item-input {
+	opacity: 0.8;
+}
+
+.details-content.has-tabs {
+	bottom: 0;
+}
