--- a/www/templates/chronicle.html
+++ b/www/templates/chronicle.html
@@ -11,7 +11,7 @@
 					<div class="cd-timeline-content padding dark">
 						<h5 class="cd-timeline-title marginBottom0 marginTop0">{{activity.title}}</h5>
 						<a ng-click="goToDetails(activity.id)" href="" class="cd-timeline-discuss">
-							<i class="ion-chatbubble-working positive"></i>
+							<i class="ion-document-text dark"></i>
 						</a>
 						<p class="marginTop5 cd-author">{{activity.date}}</p>
 						<p read-more ng-model="activity.text" words="true" length="20"></p>
