--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,19 +1,20 @@
-<ion-view title="Login">
-	<ion-content overflow-scroll="true" padding="true" class="has-header">
-		<form class="list">
+<ion-view title="Уваход">
+	<ion-content overflow-scroll="true" padding="true" class="login-content">
+		<div class="login-back"></div>
+		<form class="login-form list">
 			<ion-list>
 				<label class="item item-input" name="Username">
-					<input type="text" placeholder="Username">
+					<input type="text" placeholder="Імя">
 				</label>
 				<label class="item item-input" name="Password">
-					<input type="password" placeholder="Password">
+					<input type="password" placeholder="Пароль">
 				</label>
 			</ion-list>
-			<div class="spacer" style="height: 40px;"></div>
+			<div class="spacer" style="height: 25px;"></div>
 			<a ui-sref="tabsController.chronicle" id="login-button1"
-			   class="button button-positive  button-block icon-right ion-log-in">Log in</a>
+			   class="button button-dark button-block icon-right ion-log-in">Увайсці</a>
 			<a href="#" onclick="window.open('/signup', '_system', 'location=yes'); return false;" id="login-button2"
-			   class="button button-positive  button-block button-clear">Or create an account</a>
+			   class="button button-dark  button-block button-clear">Або стварыць акаўнт</a>
 		</form>
 	</ion-content>
 </ion-view>
