--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -3,13 +3,13 @@
 		<form class="list">
 			<ion-list>
 				<label class="item item-input" name="Email">
-					<input type="email" placeholder="Email">
+					<input type="email" placeholder="Пошта">
 				</label>
 				<label class="item item-input" name="Username">
-					<input type="text" placeholder="Username">
+					<input type="text" placeholder="Імя">
 				</label>
 				<label class="item item-input" name="Password">
-					<input type="text" placeholder="Password">
+					<input type="text" placeholder="Пароль">
 				</label>
 			</ion-list>
 			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-positive  button-block">Sign
