Changes for style.

--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,6 +1,7 @@
-<ion-view title="Signup">
-	<ion-content overflow-scroll="true" padding="true" scroll="false" class="has-header">
-		<form class="list">
+<ion-view title="Cтварыць акаўнт">
+	<ion-content overflow-scroll="true" padding="true" scroll="false" class="login-content has-header">
+		<div class="login-push"></div>
+		<form class="login-form list">
 			<ion-list>
 				<label class="item item-input" name="Email">
 					<input type="email" placeholder="Пошта">
@@ -12,8 +13,9 @@
 					<input type="text" placeholder="Пароль">
 				</label>
 			</ion-list>
-			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-positive  button-block">Sign
-				up</a>
+			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-balanced button-block">
+				Стварыць
+			</a>
 		</form>
 	</ion-content>
 </ion-view>
