--- a/www/templates/chronicleDetails.html
+++ b/www/templates/chronicleDetails.html
@@ -1,19 +1,22 @@
 <ion-view title="Дакументы">
 	<ion-content overflow-scroll="true" padding="true" class="details-content has-header">
-		<h3>Test</h3>
-		<div>Teststst</div>
+		<h4>{{selectedChronicle.title}}</h4>
+		<div>{{selectedChronicle.date}}</div>
 		<ion-gallery ion-gallery-items="items"></ion-gallery>
 
 		<ion-pull-up-footer class="bar-dark" on-expand="footerExpand()" on-collapse="footerCollapse()">
-			<ion-pull-up-handle width="100" height="25" toggle="ion-chevron-up ion-chevron-down" style="border-radius: 25px 25px 0 0">
+			<ion-pull-up-handle width="100"
+			                    height="25"
+			                    toggle="ion-chevron-up ion-chevron-down"
+			                    style="border-radius: 25px 25px 0 0">
 				<i class="icon ion-chevron-up"></i>
 			</ion-pull-up-handle>
 			<ion-pull-up-bar>
-				<h1 class="title" ion-pull-up-trigger>Tap here</h1>
+				<h5 class="title" ion-pull-up-trigger>Абмяркаваць</h5>
 			</ion-pull-up-bar>
 
 			<ion-pull-up-content scroll="false">
-			<!--Add content here-->
+				<!--Add content here-->
 			</ion-pull-up-content>
 
 		</ion-pull-up-footer>
