--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view title="Уваход">
-	<ion-content overflow-scroll="true" padding="true" class="login-content">
-		<div class="login-back"></div>
+	<ion-content overflow-scroll="true" padding="true" class="login-content has-header">
+		<div class="login-push"></div>
 		<form class="login-form list">
 			<ion-list>
 				<label class="item item-input" name="Username">
@@ -13,7 +13,7 @@
 			<div class="spacer" style="height: 25px;"></div>
 			<a ui-sref="tabsController.chronicle" id="login-button1"
 			   class="button button-dark button-block icon-right ion-log-in">Увайсці</a>
-			<a href="#" onclick="window.open('/signup', '_system', 'location=yes'); return false;" id="login-button2"
+			<a href="#/page6" id="login-button2"
 			   class="button button-dark  button-block button-clear">Або стварыць акаўнт</a>
 		</form>
 	</ion-content>
