--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
 			</ion-list>
 			<div class="spacer" style="height: 25px;"></div>
 			<a ui-sref="tabsController.chronicle" id="login-button1"
-			   class="button button-dark button-block icon-right ion-log-in">Увайсці</a>
+			   class="button button-outline button-dark button-block icon-right ion-log-in">Увайсці</a>
 			<a href="#/page6" id="login-button2"
 			   class="button button-dark  button-block button-clear">Або стварыць акаўнт</a>
 		</form>
