--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -13,7 +13,7 @@
 					<input type="text" placeholder="Пароль">
 				</label>
 			</ion-list>
-			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-balanced button-block">
+			<a ui-sref="tabsController.chronicle" id="signup-button3" class="button button-outline button-dark button-block">
 				Стварыць
 			</a>
 		</form>
