--- a/www/css/ion-gallery.css
+++ b/www/css/ion-gallery.css
@@ -1,7 +1,7 @@
 .gallery-view .image-container {
 	position: relative;
 	overflow: hidden;
-	border: 2px solid white
+	border: 1px solid black;
 }
 
 .gallery-view .image-container img {
@@ -14,7 +14,7 @@
 }
 
 .imageView .has-no-header {
-	top: 0px !important
+	top: 0 !important;
 }
 
 .imageView .close-btn {
@@ -22,49 +22,50 @@
 	border: 2px solid;
 	position: absolute;
 	right: 5px;
-	border-radius: 5px
+	border-radius: 5px;
 }
 
 .imageView .headerView {
 	background-image: none;
-	background-color: black
+	background-color: #444;
 }
 
 .imageView .gallery-slide-view {
 	width: 98%;
-	background-color: transparent
+	background-color: transparent;
+	border-color: transparent;
 }
 
 .imageView .image-subtitle {
 	color: white;
 	position: absolute;
-	bottom: 0px;
+	bottom: 0;
 	left: 10px;
 	width: 95%;
 	height: 15%;
-	z-index: 100
+	z-index: 100;
 }
 
 .imageView .listContainer {
 	width: 100%;
 	height: 100%;
-	background-color: black
+	background-color: #444;
 }
 
 .imageView .hideAll {
-	display: none
+	display: none;
 }
 
 .imageView img {
 	display: block;
 	width: 100%;
-	height: auto
+	height: auto;
 }
 
 .imageView .scroll-view {
 	position: absolute;
 	width: 100%;
-	height: 100%
+	height: 100%;
 }
 
 .imageView .scroll-view .scroll {
@@ -96,5 +97,5 @@
 	-moz-box-align: center;
 	-webkit-align-items: center;
 	-ms-flex-align: center;
-	align-items: center
+	align-items: center;
 }
