--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,9 +9,29 @@
 }
 
 .login-form .item-input {
-	opacity: 0.8;
+	opacity: 0.7;
+}
+
+.chronicle {
+	background-image: url("img/styles/paper.png");
 }
 
 .details-content.has-tabs {
 	bottom: 0;
+}
+
+.details-content {
+	background-image: url("img/styles/paper.png");
+}
+
+.bar-stable.bar.bar-header, .tabs-stable > .tabs, .tabs.tabs-stable {
+	background-color: #444;
+}
+
+.bar.bar-stable .title, .tabs-stable > .tabs, .tabs.tabs-stable, .back-button {
+	color: #E1E1E1 !important;
+}
+
+.login-form .button-outline {
+	border-width: 2px;
 }
