--- a/www/templates/chronicleDetails.html
+++ b/www/templates/chronicleDetails.html
@@ -4,16 +4,17 @@
 		<div>{{selectedChronicle.date}}</div>
 		<ion-gallery ion-gallery-items="items"></ion-gallery>
 
-		<ion-pull-up-footer class="bar-dark" on-expand="footerExpand()" on-collapse="footerCollapse()">
+		<ion-pull-up-footer class="bar-dark"
+		                    on-expand="footerExpand()"
+		                    on-collapse="footerCollapse()"
+		                    initial-state="minimized"
+		                    default-behavior="expand">
 			<ion-pull-up-handle width="100"
 			                    height="25"
 			                    toggle="ion-chevron-up ion-chevron-down"
 			                    style="border-radius: 25px 25px 0 0">
 				<i class="icon ion-chevron-up"></i>
 			</ion-pull-up-handle>
-			<ion-pull-up-bar>
-				<h5 class="title" ion-pull-up-trigger>Абмяркаваць</h5>
-			</ion-pull-up-bar>
 
 			<ion-pull-up-content scroll="false">
 				<!--Add content here-->
