Added discuss page.

--- a/www/templates/chronicleDetails.html
+++ b/www/templates/chronicleDetails.html
@@ -16,8 +16,15 @@
 				<i class="icon ion-chevron-up"></i>
 			</ion-pull-up-handle>
 
-			<ion-pull-up-content scroll="false">
-				<!--Add content here-->
+			<ion-pull-up-content class="details-discuss" scroll="false">
+				<div class="row">
+					<div class="col text-center"><a href="">Нацыяналістычная</a></div>
+					<div class="col text-center"><a href="">Савецкая</a></div>
+					<div class="col text-center"><a href="">Сучасная</a></div>
+				</div>
+				<div class="row">
+
+				</div>
 			</ion-pull-up-content>
 
 		</ion-pull-up-footer>
