--- a/www/css/swipe-cards.css
+++ b/www/css/swipe-cards.css
@@ -23,14 +23,21 @@
 	position: fixed;
 }
 
+.swipe-card-title {
+	font-size: 26px;
+}
+
 swipe-card {
+	padding: 10px 10px 25px 10px;
+	background: #eee;
+	border: 1px solid #fff;
+	box-shadow: 0 2px 15px #333;
 	display: none;
 	position: fixed;
 	-webkit-transform: scale(1, 1);
 	top: 15%;
 	width: 100%;
 	box-sizing: border-box;
-	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 4px;
 	overflow: hidden;
 	-webkit-animation-fill-mode: forwards;
