--- a/www/css/fonts.css
+++ b/www/css/fonts.css
@@ -2,6 +2,9 @@
 	font-family: 'Neucha', cursive;
 }
 
+.slab-font {
+	font-family: 'Roboto Slab', serif;
+}
 
 /* cyrillic */
 @font-face {
@@ -10,4 +13,13 @@
 	font-weight: 400;
 	src: local('Neucha'), url("fonts/neucha.woff2") format('woff2');
 	unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* cyrillic-ext */
+@font-face {
+	font-family: 'Roboto Slab';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'), url("fonts/slab.woff2") format('woff2');
+	unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
