--- a/www/css/chronicle.css
+++ b/www/css/chronicle.css
@@ -38,7 +38,7 @@
 	width: 100%;
 	height: 33%;
 	margin: 1px 0;
-	font-size: 30px;
+	font-size: 24px;
 	text-align: center;
 	padding: 0;
 }
@@ -46,24 +46,24 @@
 .card.chronicle-card:first-child {
 	height: 32%;
 	margin: 3px 0;
-	font-size: 25px;
+	font-size: 18px;
 }
 
 .card.chronicle-card:last-child {
-	font-size: 25px;
+	font-size: 18px;
 }
 
 .soviet-card {
-	background-color: #a72523;
+	background: linear-gradient(141deg, #DA2D2B  0%, #b72523 51%, #a72523 75%);
 	color: #fff;
 }
 
 .national-card {
-	background-color: #d7e3e6;
+	background: linear-gradient(141deg, #FCFCFC  0%, #F5F5F5 51%, #EFEFEF 75%);
 }
 
 .modern-card {
-	background-color: #009688;
+	background: linear-gradient(141deg, #00B0A2  0%, #00A597 51%, #009688 75%);
 	color: #fff;
 }
 
