--- a/www/css/national.css
+++ b/www/css/national.css
@@ -1,9 +1,9 @@
 .repression-row {
-	margin: 50px 0 70px 20px;
+	margin: 50px 0 70px 5px;
 }
 
 .repression-element {
-	font-size: 45px;
+	font-size: 20px;
 }
 
 .repression-content {
@@ -28,4 +28,30 @@
 
 .popover-arrow:after {
 	background-color: #444 !important;
+}
+
+.triangle {
+	width: 100%;
+	height: 542px;
+	border-bottom: 80px solid black;
+	border-right: 425px solid transparent;
+}
+
+.circle {
+	width: 400px;
+	height: 400px;
+	background: black;
+	border-radius: 400px;
+	position: absolute;
+	right: 70px;
+	top: 170px;
+}
+
+.bnr-text {
+	color: #B72624;
+	position: absolute;
+	font-size: 45px;
+	top: 565px;
+	right: 104px;
+	transform: rotate(11deg);
 }
