--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,7 +17,11 @@
 }
 
 .national-back {
-	background-image: url("img/styles/paper.png");
+	background: linear-gradient(141deg, #FCFCFC  0%, #F5F5F5 51%, #EFEFEF 75%);
+}
+
+.modern-back {
+	background: white;
 }
 
 .soviet-back {
