Changed according to comments.

--- a/www/css/chronicle.css
+++ b/www/css/chronicle.css
@@ -63,7 +63,7 @@
 }
 
 .modern-card {
-	background: linear-gradient(141deg, #00B0A2  0%, #00A597 51%, #009688 75%);
+	background: linear-gradient(141deg, #222 0%, #333 51%, #444 75%);
 	color: #fff;
 }
 
