--- a/www/css/national.css
+++ b/www/css/national.css
@@ -1,5 +1,5 @@
 .repression-row {
-	margin: 50px 0 70px 5px;
+	margin: 50px 0 35px 5px;
 }
 
 .repression-element {
@@ -14,10 +14,20 @@
 .repression-title {
 	background-color: #444;
 	color: #eee;
-	font-size: 22px;
+	font-size: 20px;
 }
 
 .repression-title span {
+	margin: auto;
+	display: inline-block;
+}
+
+.repression-footer {
+	opacity: 0.7;
+	bottom: -40px;
+}
+
+.repression-footer span {
 	margin: auto;
 }
 
