--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,15 +35,15 @@
 }
 
 .national-back {
-	background: linear-gradient(141deg, #FCFCFC 0%, #F5F5F5 51%, #EFEFEF 75%);
+	background: linear-gradient(141deg, #E7DACD 0%, #DBCEC1 51%, #D0C3B6 75%);
 }
 
 .modern-back {
-	background: linear-gradient(141deg, #222 0%, #333 51%, #444 75%);
+	background: linear-gradient(141deg, #57604C 0%, #515A47 51%, #49523F 75%);
 }
 
 .soviet-back {
-	background: linear-gradient(141deg, #B72624 0%, #AE2624 51%, #a72523 75%);
+	background: linear-gradient(141deg, #a32928 0%, #972827 51%, #902827 75%);
 	color: #fff;
 }
 
@@ -69,4 +69,19 @@
 
 .ion-pull-up-handle {
 	border-radius: 25px 25px 0 0;
+}
+
+.quote-text {
+	font-size: 16px;
+}
+
+.quote-author {
+	font-size: 12px;
+	font-style: italic;
+	text-align: -webkit-right;
+	margin-right: 28px;
+}
+
+.quote-wrapper {
+	margin: 50px 0;
 }
