Added national screens.

--- a/www/app/national/templates/u.html
+++ b/www/app/national/templates/u.html
@@ -1,5 +1,7 @@
 <div class="quote-wrapper">
-	<p class="quote-text">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў іншых кірылічных алфавітах славянскіх моў.</p>
-	<span class="u-left versa-font">Ў</span>
-	<span class="u-right versa-font">Ў</span>
+	<p class="u-text">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў іншых кірылічных алфавітах славянскіх моў.</p>
+</div>
+<div>
+	<span class="u-left slab-font">Ў</span>
+	<span class="u-right slab-font">Ў</span>
 </div>
