Added soviet content.

--- a/www/app/soviet/templates/bssr.html
+++ b/www/app/soviet/templates/bssr.html
@@ -1,10 +1,10 @@
 <div>
-	<div>
+	<div class="truth-font kaizer-text">
 		<p>БССР</p>
 		<p>01.01.1919</p>
 		<p>19.09.1991</p>
 	</div>
-	<div>
+	<div class="bnr-black-line helvetica-font">
 		<p>БНР</p>
 		<p>25.03.1919</p>
 		<p>28.04.1919</p>
