--- a/www/app/soviet/templates/nezal.html
+++ b/www/app/soviet/templates/nezal.html
@@ -1,4 +1,4 @@
-<div>
+<div class="nezal-revert">
 	<p class="helvetica-font">НЕАЭСЛЬНЖАЕЦЬ</p>
-	<p class="helvetica-font">НЕАЭСЛЬНЖАЕЦЬ</p>
+	<p class="helvetica-font nezal-mirror">НЕАЭСЛЬНЖАЕЦЬ</p>
 </div>
