--- a/www/app/soviet/templates/kaizer.html
+++ b/www/app/soviet/templates/kaizer.html
@@ -1,8 +1,8 @@
 <div>
-	<p class="german-font">Deutsches</p>
-	<p class="gable-font">BELARUSKAYA NARODNAYA RESPUBLIKA</p>
-	<p class="german-font">Kaiserreich</p>
-	<div>
+	<p class="german-font kaizer-text">Deutsches</p>
+	<p class="gable-font kaizer-bnr-text">BELARUSKAYA NARODNAYA RESPUBLIKA</p>
+	<p class="german-font kaizer-text">Kaiserreich</p>
+	<div class="gramata-text helvetica-font">
 		Рада Беларускае Народнае Рэспублікі, як выбраная прадстаўніца Беларускага Народу, зварачаецца да Вашай
 		Імпэратарскай Вялікасьці з словамі глыбокае падзякі за вызваленьне Беларусі нямецкімі войскамі з цяжкага ўціску,
 		чужога пануючага зьдзеку і анархіі.
