--- a/www/css/national.css
+++ b/www/css/national.css
@@ -9,6 +9,7 @@
 .repression-content {
 	height: 100%;
 	border-radius: 0 !important;
+	text-align: center;
 }
 
 .repression-title {
@@ -32,8 +33,7 @@
 }
 
 .repression-img {
-	width: 100%;
-	max-height: 300px;
+	max-height: 237px;
 }
 
 .popover-arrow:after {
@@ -42,28 +42,29 @@
 
 .triangle {
 	width: 100%;
-	height: 542px;
-	border-bottom: 80px solid black;
-	border-right: 425px solid transparent;
+	border-bottom: 5em solid black;
+	border-right: 56em solid transparent;
+	position: absolute;
+	bottom: 47px;
 }
 
 .circle {
-	width: 400px;
-	height: 400px;
+	width: 100%;
+	padding-top: 100%;
 	background: black;
-	border-radius: 400px;
+	border-radius: 100%;
 	position: absolute;
-	right: 70px;
-	top: 170px;
+	right: 53%;
+	bottom: 11%;
 }
 
 .bnr-text {
 	color: #B72624;
 	position: absolute;
-	font-size: 45px;
-	top: 565px;
-	right: 104px;
-	transform: rotate(11deg);
+	font-size: 6em;
+	left: 21%;
+	transform: rotate(5deg);
+	bottom: 118px;
 }
 
 .idea-orn {
@@ -80,13 +81,12 @@
 }
 
 .sun-postcard {
-	position: absolute;
-	bottom: 80px;
+	clear: both;
 }
 
 .sun-postcard img {
-	width: 70%;
 	height: auto;
+	max-height: calc(100vh - 400px);
 }
 
 .map-title {
@@ -95,8 +95,7 @@
 }
 
 .map-postcard {
-	position: absolute;
-	bottom: 80px;
+
 }
 
 .map-postcard img {
@@ -195,4 +194,8 @@
 	left: 18%;
 	z-index: 1;
 	box-shadow: 7px 2px 13px #8C8C8C;
+}
+
+.popover {
+	width: 181px;
 }
