--- a/www/app/national/templates/udzelniki.html
+++ b/www/app/national/templates/udzelniki.html
@@ -124,7 +124,7 @@
 
 <script id="my-popover.html" type="text/ng-template">
 	<ion-popover-view>
-		<ion-header-bar class="repression-title neucha-font">
+		<ion-header-bar class="repression-title helvetica-font">
 			<span>{{repression.name}}</span>
 		</ion-header-bar>
 		<ion-content class="repression-content">
