--- a/www/app/soviet/templates/repressions.html
+++ b/www/app/soviet/templates/repressions.html
@@ -1,4 +1,4 @@
-<div class="neucha-font">
+<div class="helvetica-font">
 	<div class="row repression-row">
 		<div class="col"><span class="repression-element" ng-click="openPopover($event, 0)">X</span></div>
 		<div class="col"><span class="repression-element">O</span></div>
