--- a/www/app/national/templates/sun.html
+++ b/www/app/national/templates/sun.html
@@ -1,5 +1,5 @@
 <div class="quote-wrapper">
-	<p class="quote-text neucha-font text-center">«Узыходзіць сонца незалежнай Беларусі!»</p>
+	<p class="quote-text helvetica-font text-center">«Узыходзіць сонца незалежнай Беларусі!»</p>
 	<p class="quote-author">Янка Серада</p>
 </div>
 <div class="sun-postcard text-center">
